# InfoGrafica

./: README.md
Practica/: RubricaEvaluacionAlumnos.ods  aux.h  cilindro.cc  cilindro.h  cono.cc  cono.h  cubo.cc  cubo.h  ejes.cc  ejes.h  escena.cc  escena.h  esfera.cc  esfera.h  luz.cc  luz.h  luz_direccional.cc  luz_direccional.h  luz_posicional.cc  luz_posicional.h  malla.cc  malla.h  material.cc  material.h  objply.cc  objply.h  objrevolucion.cc  objrevolucion.h  ply_reader.cc  ply_reader.h  plys  practicas.cc  tetraedro.cc  tetraedro.h  tuplasg.h
Practica1/: aux.h  cubo.cc  cubo.h  ejes.cc  ejes.h  escena.cc  escena.h  malla.cc  malla.h  pracs_exe  practicas.cc  tetraedro.cc  tetraedro.h  tuplasg.h
Practica_IG/: .clang-format  Anotaciones.md  CMakeLists.txt
Practica_IG/amongus/: cabeza.cc  cabeza.h  cuerpo.cc  cuerpo.h  cuerpo_completo.cc  cuerpo_completo.h  cuerpo_hueso.cc  cuerpo_hueso.h  cuerpo_hueso_cabeza.cc  cuerpo_hueso_cabeza.h  hueso.cc  hueso.h  mochila.cc  mochila.h  pierna.cc  pierna.h  pierna_inf.cc  pierna_inf.h  pierna_sup.cc  pierna_sup.h  semiesfera.cc  semiesfera.h  tripulante.cc  tripulante.h  tripulante_mochila.cc  tripulante_mochila.h  visor.cc  visor.h
Practica_IG/entrega/: RubricaEvaluacionAlumnos.ods  cubo.cc  cubo.h  ejes.cc  esfera.cc  luz.cc  luz.h  luz_direccional.cc  luz_direccional.h  luz_posicional.cc  luz_posicional.h  makefile  malla.cc  malla.h  material.cc  objply.h  objrevolucion.cc  objrevolucion.h
Practica_IG/entrega/plys/: amogus.ply  peon_rotadoX.ply  peon_rotadoZ.ply
Practica_IG/include/: Cilindro.h  Cono.h  Esfera.h  aux.h  cilindro.h  cono.h  cuadro_textura.h  cubo.h  cubo_textura.h  escena.h  esfera.h  jpg_imagen.hpp  jpg_jinclude.h  jpg_memsrc.hpp  jpg_readwrite.hpp  luz.h  luzAnimada.h  luz_direccional.h  luz_posicional.h  malla.h  material.h  mesa.h  objply.h  objrevolucion.h  piedra.h  ply_reader.h  tetraedro.h  textura.h
Practica_IG/plys/: bombilla.ply  hueso.ply  lata-pcue.ply
Practica_IG/src/: Cilindro.cc  Cono.cc  Esfera.cc  cilindro.cc  cono.cc  cuadro_textura.cc  cubo.cc  cubo_textura.cc  ejes.cc  escena.cc  esfera.cc  jpg_imagen.cpp  jpg_memsrc.cpp  jpg_readwrite.cpp  luz.cc  luzAnimada.cc  luz_direccional.cc  luz_posicional.cc  malla.cc  material.cc  mesa.cc  objply.cc  objrevolucion.cc  piedra.cc  ply_reader.cc  practicas.cc  tetraedro.cc  textura.cc
pruebasOpenGL/Cubo/: cubo.cc  cubo.h  escena.cc  main.c  malla.cc  pracs_exe
pruebasOpenGL/Pentagono/: CMakeLists.txt
